--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "forever": "^4.0.3",
-    "path": "^0.12.7"
+    "http-proxy-middleware": "^2.0.6",
+    "path": "^0.12.7",
+    "pm2": "^5.2.2",
   }
 }
