--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "forever": "^4.0.3",
     "http-proxy-middleware": "^2.0.6",
-    "path": "^0.12.7",
-    "pm2": "^5.2.2"
+    "path": "^0.12.7"
   }
 }
